cmake_minimum_required(VERSION 3.17)
project(Advent_Of_Code)

set(CMAKE_CXX_STANDARD 17)

add_executable(Advent_Of_Code main.cpp "2020_01/2020_01.cpp" "2020_01/2020_01.hpp" "2019_01/2019_01.cpp" "2019_01/2019_01.hpp" "2020_02/2020_02.cpp" "2020_02/2020_02.hpp" "2019_02/2019_02.cpp" "2019_02/2019_02.hpp" "2020_03/2020_03.cpp" "2020_03/2020_03.hpp" "2020_04/2020_04.cpp" "2020_04/2020_04.hpp" 2020_05/2020_05.cpp 2020_05/2020_05.hpp)